add positions
