# backend/db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 2021_07_09_051635) do
+ActiveRecord::Schema.define(version: 2021_08_16_090652) do
 
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
@@ -32,6 +32,15 @@ ActiveRecord::Schema.define(version: 2021_07_09_051635) do
     t.datetime "created_at", precision: 6, null: false
     t.datetime "updated_at", precision: 6, null: false
     t.index ["team_id", "uniform_number"], name: "index_players_on_team_id_and_uniform_number", unique: true
+  end
+
+  create_table "positions", force: :cascade do |t|
+    t.string "name", limit: 50, null: false
+    t.string "short_name", limit: 10, null: false
+    t.datetime "created_at", precision: 6, null: false
+    t.datetime "updated_at", precision: 6, null: false
+    t.index ["name"], name: "index_positions_on_name", unique: true
+    t.index ["short_name"], name: "index_positions_on_short_name", unique: true
   end
 
   create_table "teams", force: :cascade do |t|
